Fix sticky time row not showing on top of reservation slots (refs #286)

--- a/app/shared/availability-view/_availability-view.scss
+++ b/app/shared/availability-view/_availability-view.scss
@@ -269,6 +269,7 @@
     display: flex;
 
     .reservation-slot {
+      z-index: -1;
       background-color: $not-reservable-not-open-slot-color;
       overflow: hidden;
       position: relative;
